# wine-flask

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Pipfile  README.md  Untitled.ipynb  app.py  docker-compose.local.yml  docker-compose.yml  fake_wines_NEW  pyproject.toml  requirements.txt
.well-known/: ai-plugin.json
docs/: seo-basics-epic.md
openapi/: image-api.yaml
scripts/: csv_to_sqlite.py  upload_to_minio.py
static/: fake_name_desc_price.pkl  fake_names_descs_prices.xls  fake_names_descs_prices.xlsx  fake_wines.csv  fakes.csv
templates/: index.html  page.html
